# agent-reliability-bench

./: .gitignore  DATA_REPORT.md  E1_PREREG.md  E1_PREREG_DRAFT.md  LICENSE  NEXT_PAPER.md  NOTE.md  P4_PREREG.md  PAPER.md  PROTOCOL.md  PYPI_README.md  README.md  REGEN_NOTE.md  RELEASE_NOTES_v0.1.0.md  REPRO.md  RESULTS.md  REWRITE_NOTE.md  S2_PREREG.md  S3_PREREG.md  S4_PREREG.md  SEAL_MANIFEST_baseline.txt  START_HERE.md  STUDY.md  agent.py  agg_multi.ps1  audit_log.json  audit_offline.py  bench_lib.py  calibrate2.py  calibrate_judge.py  candidate_ft.py  cross_source.py  cross_source_abstain.py  data_engine.py  data_report.py  demo.py  diagnose.py  embodied_power.py  evaluate.py  faith_loop.py  (+51 more)
bench/: B300_AGENT_BRIEF.md  BENCH_SPEC.md  CLAIMS.md  METRICS.md  run_bench.py  sample_bench.jsonl
carla/: CARLA_LOOP.md  carla_failure_taxonomy.json  get_scenarios.ps1  run_lead_route.ps1  run_taxonomy.ps1
env/: Dockerfile  smoke.py
examples/: gate_flaky_ci.py  gate_prompt_change.py
p4/: build_s4_roots.ps1  fleet_p4ret_worker.ps1  p4_c1.csv  p4_expert_28330.csv  p4_expert_probe.csv  p4_panel_fix.csv  p4p_jobs_2000.txt  p4p_jobs_2004.txt  p4p_jobs_2008.txt  p4p_p2000.csv  p4p_p2004.csv  p4p_p2008.csv  p4ret_jobs_2000.txt  p4ret_jobs_2004.txt  p4ret_jobs_2008.txt  p4ret_p2000.csv  p4ret_p2004.csv  p4ret_p2008.csv  run_p4_c1_control.ps1  run_p4_c2_panel_fix.ps1  run_p4_collect_28330.ps1  run_p4_expert_probe.ps1  run_s4b_panel_fix.ps1  train_p4c2.ps1  train_s4b.ps1
paper_sea/: PAPER3_SEEDS.md  REVIEW_NOTES_2026-07-23.md  main.tex  references.bib
s3_data/: a1_panel.csv  (+26 more)
(+19 files in other folders)
